# cbn-tui

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flatten.jq  index.html
.agent/journal/: bolt.md
.agent/skills/bolt/: SKILL.md
.agent/skills/changelog-master/: SKILL.md
.agent/skills/code-reviewer/: SKILL.md
.agent/skills/issue-master/: SKILL.md
.github/workflows/: build-native.yml  create-release.yml  release.yml  test.yml
.jules/: bolt.md
docs/: index.md  product-guidelines.md  product.md  tech-stack.md
docs/skills/web-native-parity/: SKILL.md
src/: data.rs  lib.rs  main.rs  matcher.rs  model.rs  search_index.rs  theme.rs  ui.rs  web_data.rs
src/app_core/: indexing.rs  input.rs  mod.rs  reducer.rs  state.rs  web_mouse.rs
src/runtime/: mod.rs
src/runtime/native/: data.rs  main.rs  mod.rs
src/runtime/web/: data.rs  main.rs  mod.rs
