[package]
name = "cbn-tui"
description = "TUI browser for 'Cataclysm: Bright Nights' JSON data."
homepage = "https://github.com/ushkinaz/cbn-tui"
version = "0.2.0"
repository = "https://github.com/ushkinaz/cbn-tui"
authors = ["Ushkinaz <ushkinaz@gmail.com>"]
edition = "2024"

[dependencies]
ratatui = { version = "0.30.0", features = ["crossterm_0_29"] }
crossterm = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
reqwest = { version = "0.13.1", features = ["blocking", "gzip", "brotli", "deflate"] }
tui-scrollview = "0.6"
foldhash = "0.2.0"
unicode-width = "0.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
