[package]
name = "cbn-tui"
description = "TUI browser for 'Cataclysm: Bright Nights' JSON data."
homepage = "https://github.com/ushkinaz/cbn-tui"
version = "0.3.1"
repository = "https://github.com/ushkinaz/cbn-tui"
authors = ["Ushkinaz <ushkinaz@gmail.com>"]
edition = "2024"
autobins = false
default-run = "cbn-tui"

[features]
default = []
web = []

[dependencies]
anyhow = "1.0"
foldhash = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tui-scrollview = "0.6"
unicode-width = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
directories = "6.0"
ratatui = { version = "0.30.0", features = ["crossterm_0_29"] }
reqwest = { version = "0.13.1", features = ["blocking", "gzip", "brotli", "deflate"] }
walkdir = "2.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "0.1.7" }
js-sys = "0.3.85"
ratzilla = { version = "0.3.0" }
ratatui = { version = "0.30.0", default-features = false, features = ["all-widgets", "layout-cache"] }
reqwest = { version = "0.13.1", default-features = false }
wasm-bindgen-futures = { version = "0.4.51" }
web-sys = { version = "0.3.85", features = ["Window", "Document", "Element", "HtmlElement", "DomRect"] }

[[bin]]
name = "cbn-tui"
path = "src/runtime/native/main.rs"

[[bin]]
name = "cbn-web"
path = "src/runtime/web/main.rs"
required-features = ["web"]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
